alpha
- Mayhem
  Fix Chrome's install warning that 4chan X would execute on all domains.
  Fix Quote Backlinks not affecting inlined quotes.
  Fix Quote Highlighting not affecting inlined quotes.

master

2.35.0
- Mayhem
  Use 4chan's API to fetch posts for:
    - Thread Updater.
    - Quote Inlining.
    - Quote Previewing.
    - Thread Expansion.
    - Comment Expansion.
    This will make fetching faster, and reduce bandwidth usage.
  Add an option to disable 4chan's inline extension. Enabled by default.
  Fix compatibility with Scriptish's auto-udpater.

2.34.10
- Mayhem
  Fix 4chan X. Blame moot.

2.34.9
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.

2.34.8
- Mayhem
  One-word-captcha: you don't need to input an extra space anymore, the true word will be duplicated.

2.34.7
- Mayhem
  Fix one-word-captcha, you'll need to leave a space for the fake word now.

2.34.6
- Mayhem
  Fix error caused by change in 4chan's HTML about hidden filename in case of spoiler.

2.34.5
- Mayhem
  Fix cooldown on /q/.
  Fix thread creation with no file on /q/.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/.
  Add /mlp/ archive redirection.

2.34.4
- Mayhem
  Add /q/ archive redirection.

2.34.3
- Mayhem
  Update /k/ archive redirection.

2.34.2
- Mayhem
  Adjust background tabs max update interval down to 5 minutes instead of 10.
  Divide the Delete Link in the Menu into a Post and Image deletion links.
  The Delete Links in the Menu now have a cooldown.
  Add /fit/ archive redirection.

2.34.1
- Mayhem
  Add /wsg/ archive redirection.

2.34.0
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.